Fri Jul 31 11:26:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp
        * connectors/dds4ccm/impl/ndds/QosPolicyCountSeq.h
        * connectors/dds4ccm/impl/ndds/RequestedIncompatibleQosStatus.h
          DataReaderListener is now fully implemented

Fri Jul 31 11:13:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp
        * connectors/dds4ccm/impl/ndds/LivelinessChangedStatus.h
        * connectors/dds4ccm/impl/ndds/RequestedDeadlineMissedStatus.h
          Added some more status conversions

Fri Jul 31 11:05:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp
        * connectors/dds4ccm/impl/ndds/DataReader.h
        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp
        * connectors/dds4ccm/impl/ndds/DataReaderListener.h
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp
        * connectors/dds4ccm/impl/ndds/DataWriter.h
        * connectors/dds4ccm/impl/ndds/DataWriterListener.cpp
        * connectors/dds4ccm/impl/ndds/DataWriterListener.h
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.h
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h
        * connectors/dds4ccm/impl/ndds/Publisher.cpp
        * connectors/dds4ccm/impl/ndds/Publisher.h
        * connectors/dds4ccm/impl/ndds/PublisherListener.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener.h
        * connectors/dds4ccm/impl/ndds/QueryCondition.cpp
        * connectors/dds4ccm/impl/ndds/QueryCondition.h
        * connectors/dds4ccm/impl/ndds/ReadCondition.cpp
        * connectors/dds4ccm/impl/ndds/ReadCondition.h
        * connectors/dds4ccm/impl/ndds/StatusCondition.cpp
        * connectors/dds4ccm/impl/ndds/StatusCondition.h